[gd_scene load_steps=4 format=3 uid="uid://bloscphy56crt"]

[ext_resource type="Script" path="res://Scripts/CheckPoint.gd" id="1_y2h6n"]

[sub_resource type="BoxMesh" id="BoxMesh_q8fmv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ue1mm"]
size = Vector3(2.61353, 1.91321, 2.16602)

[node name="CheckPoint" type="Area3D"]
script = ExtResource("1_y2h6n")

[node name="CheckPointVisual" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_q8fmv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.456604, 0)
shape = SubResource("BoxShape3D_ue1mm")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
